Fix issue of gap between library and add book area

--- a/style.css
+++ b/style.css
@@ -410,7 +410,8 @@ body {
 .add-book-area {
     grid-area: add-book-area;
     background-color: #64748b;
-    width: 320px;
+    min-width: 320px;
+    width: 100%;
 }
 
 form {
